--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
 
 	<section class="mother">
 		    <div class="line-one">
-			    <div class="one"><p>.col-4</p></div>
-			    <div class="one"><p>.col-4</p></div>
-			    <div class="one"><p>.col-4</p></div>
+			    <div><p>.col-4</p></div>
+			    <div><p>.col-4</p></div>
+			    <div><p>.col-4</p></div>
 		    </div>
 		    <div class="line-two">
-			    <div class="two"><p>.col-12</p></div>
+			    <div><p>.col-12</p></div>
 		    </div>
 		    <div class="line-three">
-			    <div class="three"><p>.col-6</p></div>
-			    <div class="three"><p>.col-6</p></div>
+			    <div><p>.col-6</p></div>
+			    <div><p>.col-6</p></div>
 		    </div>
 		    <div class="line-four">
-			    <div class="four"><p>.col-8</p></div>
-			    <div class="four"><p>.col-2</p></div>
-			    <div class="four"><p>.col-2</p></div>
+			    <div><p>.col-8</p></div>
+			    <div><p>.col-2</p></div>
+			    <div><p>.col-2</p></div>
 		    </div>
 	</section>
 
